--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="" href="" />
+    <link/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fiba Fathima Pazhedath</title>
     <meta name="description" content="Portfolio of Fiba Fathima Pazhedath - Aspiring Full-Stack Engineer specializing in React, Node.js, and MongoDB. Building scalable, user-first products." />
